# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./blocklist";
 export * from "./threats";
 export * from "./system-blocklist";
 export * from "./dns-allowlist";
+export * from "./notifications";
